<resources>
    <string name="app_name">HiraganaMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hiragana Master</string>
    <string name="nav_header_subtitle">Made by Suzuki Kenta Zsolt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_test">Test</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Login</string>
    <string name="share_with_my_frinds">Share with my frinds</string>
    <string name="time_to_share_this_program_to_my_friends">Time to share this program to my friends</string>
    <string name="get_me_to_my_settings">get me to my settings</string>
    <string name="settings">Settings</string>
    <string name="get_to_see_my_favorite_characters">Get to see my favorite characters</string>
    <string name="let_me_see_my_favorite_characters">Let me see my favorite characters</string>
    <string name="get_to_test_myself">Get to test myself</string>
    <string name="language">Change language</string>
    <string name="timer_main">Your daily learning task will be 10 minutes</string>
    <string name="timer_main2">We will notify you if u done this task</string>
    <string name="you_want_to_test_your_skills">You want to test your skills?</string>
    <string name="get_me_to_the_learning_page">Get me to the learning page</string>
    <string name="get_to_the_learning_page">Get to the learning page</string>
    <string name="time_to_learn">Time to learn</string>
    <string name="welcome_to_hiragana_master">Welcome to Hiragana Master</string>
    <string name="dragbarUseDesc">Drag the bar. How many hiraganas you want in your test</string>
    <string name="beginner_test">Beginner test</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="fourth">fourth</string>
    <string name="sucessfulEnd">Good job u did it</string>
    <string name="score">Your score:</string>
    <string name="backToBeginnerTest">I want to do the beginner test</string>
    <string name="backToMediumTest">I want to do the medium test</string>
    <string name="backToHardcoreTest">I want to do the hardcore test</string>
    <string name="unsuccessfulEnd">Sorry you couldn\'t make it</string>
    <string name="encouragement">I think I can make it this time</string>
    <string name="backToTest">I want to try an easier level</string>
    <string name="backToRedoMedium">I want to redo medium level</string>
    <string name="backToLearn">I think I need to go back to learn</string>
    <string name="backToLearnButton">Go back</string>
    <string name="_0">0</string>
    <string name="slash">/</string>
    <string name="_6">6</string>
    <string name="hardcore_test">Hardcore test</string>
    <string name="timer">10</string>
    <string name="hardcoreHint">Enter hiragana name here</string>
    <string name="please_login">Please login</string>
    <string name="you_haven_t_registrated_yet">You haven\'t registrated yet?</string>
    <string name="registration">registration</string>
    <string name="mediumTest">Medium test</string>
    <string name="first">first</string>
    <string name="fifth">fifth</string>
    <string name="sixth">sixth</string>
    <string name="go_back">go back</string>
    <string name="edit_profile">Edit profile</string>
    <string name="password">Password</string>
    <string name="asd">asd</string>
    <string name="asd_asd_com">asd@asd.com</string>
    <string name="registrate">registrate</string>
    <string name="already_registrated">Already registrated?</string>
    <string name="password_again">Password again</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="please_registrate">Please registrate</string>
    <string name="favorites">Favorites</string>
    <string name="share_link_on_facebook">Share Link on Facebook</string>
    <string name="hiragana">Hiragana</string>
    <string name="language_change">Do you want to change the language?</string>
    <string name="language_change_btn">Do it here</string>
    <string name="want_to_edit_profile">Do you want to edit profile?</string>
    <string name="change_profile_here">Change profile here</string>
    <string name="want_to_logout_from_this_profile">Do you want to logout from this profile?</string>
    <string name="logout_from_profile_here">Logout from profile here</string>
    <string name="hardcoreSolution">send</string>
    <string name="error">Error</string>
    <string name="notification_title">Do you want to develop your japanese</string>
    <string name="notification_message">It\'s time to practice hiraganas</string>
    <string name="notification_title2">Congratulations</string>
    <string name="notification_message2">You did your daily task of 10 min</string>
    <string name="pause">Pause</string>
    <string name="beginner_level">Beginner level</string>
    <string name="_1">1</string>
    <string name="medium_level">Medium level</string>
    <string name="hardcore_level">Hardcore level</string>
    <string name="test">Test</string>
    <string name="beginner_desc">I want to test myself but I don\'t think im that good</string>
    <string name="medium_desc">I know more than a beginner I want a harder test</string>
    <string name="hardcore_desc">I think I know everything give me everything you\'ve got</string>
    <string name="ending_with"> ,with </string>
    <string name="ending_mistakes"> mistakes </string>
    <string name="percent">percent</string>
    <string name="mistake">The correct hiragana:</string>
    <string name="test_change_hiragana_amount">I want to change the amount of hiraganas</string>
    <string name="test_seekbar">Press the test button to go to the test</string>
    <string name="share_link_at_google_plus">Share Link at Google Plus</string>
    <string name="share_link_at_whatsapp">Share Link at Whatsapp</string>
    <string name="share_link_at_twitter">Share Link at Twitter</string>
    <string name="share_link_at_instagram">Share Link at instagram</string>
    <string name="twittersharefail">Please Install the Twitter app</string>
    <string name="whatsappsharefail">Please Install the Whatsapp app</string>
    <string name="googleplussharefail">Please Install the Google Plus app</string>
    <string name="gotosettings">You will need to set the language to a different one</string>
    <string name="logout">You have successfully logged out</string>
    <string name="welcome">Welcome to Hiragana Master</string>
    <string name="welcome_name">Welcome </string>
    <string name="_10_00">10:00</string>
    <string name="tryagain">Try again</string>
    <string name="empty">You left it empty</string>
    <string name="timeout">Time has ran out</string>
    <string name="unsuccessful">Unsuccessful query</string>
    <string name="emptyquery">No recorded data</string>
    <string name="paused">Paused</string>
    <string name="paused_toast">Paused. Are you ready to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No, I want to exit</string>
    <string name="no2">No</string>
    <string name="exit_test">Would you like to exit this test?</string>
    <string name="fill">Fill every field</string>
    <string name="successfull_change">Successfully changed the profile</string>
    <string name="unsuccessfull_change">Unsuccessful change</string>
    <string name="id_no_profile">There is no profile with this id</string>
    <string name="password_not_same">The passwords are not matching!</string>
    <string name="successful_data_record">Successful registration</string>
    <string name="unsuccessful_data_record">Unsuccessful registration</string>
    <string name="press">Press one of the test button to start to the test</string>
    <string name="cantfav">Unsuccessful favorite record</string>
    <string name="noid">No id like this</string>
    <string name="nodata">No recoded data, to prevent errors please registrate</string>
    <string name="favempty">No favorites has been recoded</string>
    <string name="dataqueryerror">Unsuccessful query</string>
    <string name="other">Others</string>

</resources>
