<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hiraganamaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_learn"
        android:name="com.example.hiraganamaster.ui.learn.LearnFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/learn_fragment" />

    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.hiraganamaster.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/test_fragment" />
     <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.hiraganamaster.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/favorites_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.hiraganamaster.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.hiraganamaster.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.hiraganamaster.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>