<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonpressed2"
    tools:context=".ui.test.TestFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textviewtest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/test"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/mediumDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dragbarUseDesc"
        android:gravity="center"
        android:layout_marginTop="10sp"
        />

    <SeekBar
        android:id="@+id/idSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="45"
        />

    <TextView
        android:id="@+id/seekbartv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30sp"
        />


    <TextView
        android:id="@+id/beginnertv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beginner_desc"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/beginnerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beginner_level"
        android:textSize="20sp"
        android:textColor="@color/colorwhite"
        android:background="@drawable/gradient_list2"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/mediumtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_desc"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/mediumbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_level"
        android:textSize="20sp"
        android:textColor="@color/colorwhite"
        android:background="@drawable/gradient_list2"
        android:layout_marginBottom="3sp"
        />



    <TextView
        android:id="@+id/hardcoretv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardcore_desc"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/hardcorebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardcore_level"
        android:textSize="20sp"
        android:textColor="@color/colorwhite"
        android:background="@drawable/gradient_list2"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>
