<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ending"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/sucessfulEnd"
        android:textSize="50sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/redobeginner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToBeginnerTest"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/redomedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToMediumTest"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/taxfraud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />


    <Button
        android:id="@+id/redohardcore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToHardcoreTest"
        />

</LinearLayout>