<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tvsettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tvsettings">

        <TextView
        android:id="@+id/tvlanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_change"
        android:textSize="20sp"
        />
        <Button
            android:id="@+id/btnlanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_change_btn"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:background="@drawable/gradient_list2"
            android:layout_marginBottom="10dp"
            />

        <TextView
        android:id="@+id/tvprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/want_to_edit_profile"
        android:textSize="20sp"
        />
        <Button
            android:id="@+id/btnprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_list2"
            android:text="@string/change_profile_here"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
        android:id="@+id/tvlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/want_to_logout_from_this_profile"
        android:textSize="20sp"
        />
        <Button
            android:id="@+id/btnlogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_list2"
            android:text="@string/logout_from_profile_here"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

</RelativeLayout>
